# tree-sitter-markdown-text

./: .npmrc  AGENTS.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  eslint.config.mjs  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  queries.go  queries_test.go  renovate.json  setup.py  tree-sitter.json  tsconfig.json
.claude/: settings.json
.claude/skills/pr-comment/: SKILL.md
.github/workflows/: ci.yml  go-compat.yml  publish_crates.yml  publish_npm.yml  publish_pypi.yml
bindings/c/: tree-sitter-markdown-text.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  binding_test.js  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_markdown_text/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterMarkdownText/: markdown-text.h
bindings/swift/TreeSitterMarkdownTextTests/: TreeSitterMarkdownTextTests.swift
docs/: textlint-mapping.md
go-compat/: acceptance.sh
go-compat/smoke/: go.mod  main.go
queries/: injections.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: blank_lines.txt  block_quote.txt  callouts.txt  code_blocks.txt  directive_blocks.txt  footnote_definitions.txt  headings.txt  html_blocks.txt  image_blocks.txt  inline_structural.txt  link_references.txt  lists.txt  math_blocks.txt  mdx_jsx_blocks.txt  metadata.txt  paragraphs.txt  tables.txt
test/fixtures/: sample.md
