[package]
name = "tree-sitter-markdown-text"
description = "Markdown grammar for tree-sitter, with a textlint-style AST shape"
version = "0.2.1"
authors = ["Ophidiarium"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "markdown", "textlint"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/ophidiarium/tree-sitter-markdown-text"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "html_entities.json",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.5"
