[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-markdown-text"
description = "Markdown grammar for tree-sitter, with a textlint-style AST shape"
dynamic = ["version"]
keywords = ["incremental", "parsing", "tree-sitter", "markdown", "textlint"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Ophidiarium" }]
requires-python = ">=3.10"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/ophidiarium/tree-sitter-markdown-text"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
